--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "lint": "npx eslint src && npx eslint config/build",
-    "lint:fix": "npx eslint src && npx eslint config/build --fix"
+    "lint:ts": "npx eslint src && npx eslint config/build",
+    "lint:ts:fix": "npx eslint src && npx eslint config/build --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\" --quiet-deprecation-warnings",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix --quiet-deprecation-warnings"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +40,8 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.6.2",
+    "stylelint-config-standard-scss": "^9.0.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
