--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:ts": "npx eslint src && npx eslint config/build",
     "lint:ts:fix": "npx eslint src && npx eslint config/build --fix",
     "lint:scss": "npx stylelint \"**/*.scss\" --quiet-deprecation-warnings",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix --quiet-deprecation-warnings"
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix --quiet-deprecation-warnings",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,9 @@
   "devDependencies": {
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
+    "@babel/preset-typescript": "^7.21.5",
     "@svgr/webpack": "^8.0.1",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -36,6 +39,8 @@
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
